# crumbbox

./: .gitignore  Cargo.toml  README.md
configuration/: default.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  storage_details.rs
src/routes/: health_check.rs  mod.rs  upload.rs
src/validators/: file_name_validator.rs  mod.rs
tests/api/: health_check.rs  helpers.rs  main.rs  upload.rs
tests/fixtures/: test.txt
