[package]
name = "crumbbox"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "crumbbox"

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tower-http = { version = "0.3", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
once_cell = "1"
